--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "spc_toolbox"
-version = "0.1.0"
+name = "spc-toolbox"
+version = "0.1.1"
 description = "A toolbox for Statistical Process Control"
 authors = ["Philip Solarz <philip.solarz@teliacompany.com>"]
 readme = "README.md"
@@ -9,7 +9,6 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.2.1"
 numpy = "^1.26.4"
-scipy = "^1.12.0"
 matplotlib = "^3.8.3"
 
 
